tests/cases/control-flow/errors/init-while-next-count.ari
fn main() -> i64 {
  init a = 0, b = 3 while a < b {
    a = a + 1;
  } next a + 1
  return a;
}
